# flowFP_abandoned

./: DESCRIPTION  NAMESPACE  README  config.status  configure  configure.ac
R/: AllClasses.R  AllGenerics.R  flowFP-utils.R  flowFP.R  flowFPModel.R  flowFPPlex.R  plot-fancy.R  plot-grid.R  plot-model.R  plot-plate.R  plot-qc.R  plot-stack.R  plot-tangle.R  plot-utils.R
data/: datalist  fs1.rda  fs2.rda  plate.rda
inst/: CITATION  NEWS
inst/doc/: flowFP_HowTo.R  flowFP_HowTo.Rnw
man/: append-methods.Rd  binBoundary-methods.Rd  counts-methods.Rd  flowFP-class.Rd  flowFP-package.Rd  flowFP.Rd  flowFPModel-class.Rd  flowFPModel.Rd  flowFPPlex-class.Rd  flowFPPlex.Rd  fs1.Rd  fs2.Rd  hasClasses-methods.Rd  index-methods.Rd  is.flowFP.Rd  is.flowFPModel.Rd  is.flowFPPlex.Rd  length-methods.Rd  nFeatures-methods.Rd  nInstances-methods.Rd  nRecursions-methods.Rd  name-methods.Rd  parameters-methods.Rd  plate.Rd  plot-methods.Rd  sampleClasses-methods.Rd  sampleNames-methods.Rd  show-methods.Rd  summary-methods.Rd  tags-methods.Rd
src/: flowFP.c  flowFP.h  init.c  split_utils.c
src/cutest/: CuTest.c  CuTest.h  Makefile  README  license.txt  make-tests.sh  test_example.c  test_idx_lut.c  test_median.c  test_variance.c
tests/: GNUmakefile  doRUnit.R
tests/unitTests/: report.html  report.txt  reportSummary.txt  runit.flowFP.R  runit.flowFPModel.R  runit.flowFPPlex.R
vignettes/: flowFP.bib
